--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
         <br>
         Love: C++, Perl, Elixir, Rust, Javascript...and more.<br>
         Programming from 14 years old.<br>
+        <br>
+        <h1>Github<br>
+        <a href="https://github.com/bode-mmk" target="_blank">https://github.com/bode-mmk</a></h1>
       </p>
       <br>
       <h1>Interesting</h1>
@@ -128,8 +131,6 @@
     </div>
   </section>
   </body>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <script src="scrollify/jquery.scrollify.js"></script>
   <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
   <script src="core.js"></script>
 </html>
