onclick to clipboard

--- a/index.html
+++ b/index.html
@@ -53,9 +53,14 @@
         自分のやりたいことをやれる時にやってるだけです<br>
         マイペースでやってるので知らないネタやついていけないことがたくさんあります<br>
         デレステとモバのIDは以下<br>
+        各画像をクリックでIDをコピーできます<br>
         <br>
-        <img src="image/dere_profile.png" width="100%">
-        <img src="image/moba_profile.png" width="100%">
+        <a href="javascript:void(0);" onclick="copy_to_clipboard('998693345');">
+          <img src="image/dere_profile.png" width="100%">
+        </a>
+        <a href="javascript:void(0);" onclick="copy_to_clipboard('134995328');">
+          <img src="image/moba_profile.png" width="100%">
+        </a>
       </p>
     </div>
     <div class="content-box">
@@ -81,8 +86,11 @@
         重めのストーリーは、オタクを幾度となく泣かせた。アンジェリカ……<br>
         マリナの「魚が逃げてる」と「やりました！やったんでちよ！必死に！」はマジで定期的に聞きたくなるよな<br>
         IDやメインの編成は以下の通り<br>
+        IDの画像はクリックでIDをコピーできます<br>
         <img src="image/gemi_hensei.png" width="100%">
-        <img src="image/gemi_fure.png" width="100%">
+        <a href="javascript:void(0);" onclick="copy_to_clipboard('1817571522');">
+          <img src="image/gemi_fure.png" width="100%">
+        </a>
       </p>
     </div>
     <div class="content-box">
@@ -92,9 +100,11 @@
         魑魅魍魎姉妹とヘルちゃんが全てのモチベーション、可愛い<br>
         本家wikiで一目惚れした八咫烏ちゃんが来るまでは、とりあえず真面目にやると思います<br>
         スルメゲーなので細々続けるかなぁ<br>
-        フレコはこちらです<br>
+        フレコはこちらです 画像クリックでIDをコピーできます<br>
         <br>
-        <img src="image/ark.jpg" width="100%">
+        <a href="javascript:void(0);" onclick="copy_to_clipboard('101000188911');">
+          <img src="image/ark.jpg" width="100%">
+        </a>
       </p>
     </div>
     <div class="content-box">
@@ -103,8 +113,11 @@
         和服ロリがほしい。その欲求のみで始めたゲームです<br>
         座敷童子と小豆洗いあたりが好き。このゲーム性癖って感じする<br>
         そんなに真面目にはやってません。やりたい時にやりたいだけやってます<br>
+        画像クリックでIDをコピーできます<br>
         <br>
-        <img src="image/youkai.jpg" width="100%">
+        <a href="javascript:void(0);" onclick="copy_to_clipboard('582381850');">
+          <img src="image/youkai.jpg" width="100%">
+        </a>
       </p>
     </div>
     <div class="content-box">
@@ -114,7 +127,10 @@
         人生で一番最初に真剣にランカーしたゲームでもあります。全3位はいい思い出<br>
         今では半分引退勢です。このゲームいつになったらガチャがもう少し優しくなるんだ<br>
         推しは花咲 恵ちゃん<br>
-        <img src="image/uchi.jpg" width="100%">
+        画像クリックでIDをコピーできます<br>
+        <a href="javascript:void(0);" onclick="copy_to_clipboard('39354508');">
+          <img src="image/uchi.jpg" width="100%">
+        </a>
       </p>
     </div>
     <div class="content-box">
