change playable games

--- a/index.html
+++ b/index.html
@@ -17,14 +17,22 @@
       <ul class="bode-navi-menu">
         <li class="bode-navi-menu-item"><a href="#about">About</a></li>
         <li class="bode-navi-menu-item"><a href="#imas">アイマス/シンデレラ</a></li>
-        <li class="bode-navi-menu-item"><a href="#oshiro">御城プロジェクト:RE</a></li>
         <li class="bode-navi-menu-item"><a href="#gemini">ジェミニシード</a></li>
-        <li class="bode-navi-menu-item"><a href="#ark">アークオーダー</a></li>
+        <li class="bode-navi-menu-item"><a href="#oshiro">御城プロジェクト:RE</a></li>
+        <li class="bode-navi-menu-item"><a href="#imys">あいりすミスティリア！</a></li>
       </ul>
       <ul class="bode-navi-menu">
-        <li class="bode-navi-menu-item"><a href="#youkai">妖怪百姫たん！</a></li>
-        <li class="bode-navi-menu-item"><a href="#uchihime">ウチ姫</a></li>
-        <li class="bode-navi-menu-item"><a href="#others">その他のゲーム達</a></li>
+        <li class="bode-navi-menu-item"><a href="#azure">アズールレーン</a></li>
+        <li class="bode-navi-menu-item"><a href="#gade">ガーディアンテイルズ</a></li>
+        <li class="bode-navi-menu-item"><a href="#ayalove">あやかしランブル！</a></li>
+        <li class="bode-navi-menu-item"><a href="#yousai">要塞少女</a></li>
+      </ul>
+      <ul class="bode-navi-menu">
+        <li class="bode-navi-menu-item"><a href="#furufuru">ふるふる</a></li>
+        <li class="bode-navi-menu-item"><a href="#enkuri">エンクリ</a></li>
+        <li class="bode-navi-menu-item"><a href="#rejekuro">れじぇくろ！</a></li>
+        <li class="bode-navi-menu-item"><a href="#misutore">ミストレ</a></li>
+        <li class="bode-navi-menu-item"><a href="#aria">神殺しのアリア</a></li>
       </ul>
       <ul class="bode-navi-menu">
         <li class="bode-navi-menu-item"><a href="#puyo">ぷよぐやみんぐ</a></li>
@@ -49,7 +57,6 @@
       <p>
         アイマスの活動は現在シンデレラガールズのみやってます<br>
         櫻井桃華、春霞（浜口あやめ、小早川紗枝、道明寺歌鈴、依田芳乃、脇山珠美）の計六人を担当<br>
-        気になるアイドルはいっぱい<br>
         自分のやりたいことをやれる時にやってるだけです<br>
         マイペースでやってるので知らないネタやついていけないことがたくさんあります<br>
         デレステとモバのIDは以下<br>
@@ -60,6 +67,20 @@
         </a>
         <a href="javascript:void(0);" onclick="copy_to_clipboard('134995328');">
           <img src="image/moba_profile.png" width="100%">
+        </a>
+      </p>
+    </div>
+    <div class="content-box">
+      <h2 id="gemini">ジェミニシード</h2>
+      <p>
+        トワルルとキサラギにゾッコン<br>
+        投票戦ではトワルルに全力を注ぐけどキサラギへの愛も等しくありけり<br>
+        今やってるゲームの中で一番のメイン<br>
+        キャラ性とストーリー、運営がメタで遊んでたりしてるのも平和で楽しい<br>
+        自分の出来ることを自分の出来る範囲で、ぼちぼち楽しんでます<br>
+        IDの画像はクリックでIDをコピーできます<br>
+        <a href="javascript:void(0);" onclick="copy_to_clipboard('1817571522');">
+          <img src="image/gemi_self.png" width="100%">
         </a>
       </p>
     </div>
@@ -77,59 +98,107 @@
       </p>
     </div>
     <div class="content-box">
-      <h2 id="gemini">ジェミニシード</h2>
+      <h2 id="imys">あいりすミスティリア！</h2>
       <p>
-        もちろん(?)DMM X版でやってます<br>
-        テッサが推しだったけどトワルルが来てからの鞍替えは俊足の翁<br>
-        <s>(ベッドシーンがマジで犯罪)</s><br>
-        キャラ性とストーリー、運営がメタで遊んでたりしてるのも平和で楽しい<br>
-        重めのストーリーは、オタクを幾度となく泣かせた。アンジェリカ……<br>
-        マリナの「魚が逃げてる」と「やりました！やったんでちよ！必死に！」はマジで定期的に聞きたくなるよな<br>
-        IDやメインの編成は以下の通り<br>
-        IDの画像はクリックでIDをコピーできます<br>
-        <img src="image/gemi_hensei.png" width="100%">
-        <a href="javascript:void(0);" onclick="copy_to_clipboard('1817571522');">
-          <img src="image/gemi_fure.png" width="100%">
-        </a>
-      </p>
-    </div>
-    <div class="content-box">
-      <h2 id="ark">アークオーダー</h2>
-      <p>
-        事前登録してリリースされた通知を忘れててリリース後一週間目から始めました<br>
-        魑魅魍魎姉妹とヘルちゃんが全てのモチベーション、可愛い<br>
-        本家wikiで一目惚れした八咫烏ちゃんが来るまでは、とりあえず真面目にやると思います<br>
-        スルメゲーなので細々続けるかなぁ<br>
-        フレコはこちらです 画像クリックでIDをコピーできます<br>
+        リディアとクリスが好き<br>
+        ストーリーやイベントをのんびり楽しんでます。出来ることを出来る範囲で<br>
+        フルボイスってやっぱりええなぁ<br>
         <br>
-        <a href="javascript:void(0);" onclick="copy_to_clipboard('101000188911');">
-          <img src="image/ark.jpg" width="100%">
-        </a>
+        <img src="image/imys_self.png" width="100%">
       </p>
     </div>
     <div class="content-box">
-      <h2 id="youkai">妖怪百姫たん！</h2>
+      <h2 id="azure">アズールレーン</h2>
       <p>
-        和服ロリがほしい。その欲求のみで始めたゲームです<br>
-        座敷童子と小豆洗いあたりが好き。このゲーム性癖って感じする<br>
-        そんなに真面目にはやってません。やりたい時にやりたいだけやってます<br>
-        画像クリックでIDをコピーできます<br>
+        実はずっとのんびり真面目にやってるゲーム<br>
+        風雲ちゃんとカヴァラちゃんが好き<br>
+        リトルレナウンに一目惚れして始めたのにまだお迎え出来ていないつらみ<br>
         <br>
-        <a href="javascript:void(0);" onclick="copy_to_clipboard('582381850');">
-          <img src="image/youkai.jpg" width="100%">
+        <img src="image/azure_self.jpg" width="100%">
+      </p>
+    </div>
+    <div class="content-box">
+      <h2 id="gade">ガーディアンテイルズ</h2>
+      <p>
+        リリースから今の所ずっと続けてる<br>
+        色んなゲームや時事ネタが盛り込まれていてストーリーも楽しい<br>
+        元々ゼルダが好きなのでゲーム性が似てることから結構ハマってる。ギルドはのんびり活動してます<br>
+        <br>
+        <img src="image/gade_self.jpg" width="100%">
+      </p>
+    </div>
+    <div class="content-box">
+      <h2 id="ayalove">あやかしランブル！</h2>
+      <p>
+        事前登録からずっとやっていたにも関わらず、最近ちゃんとやりはじめた<br>
+        鈴鹿御前ちゃんが一番好き<br>
+        テイスト的には結構性癖に刺さるキャラが多く追加されてしまうので石を貯めるのが大変<br>
+        出来ることを出来る範囲で、のんびりと(同盟加入は今の所考えてないです<br>
+        <br>
+        <img src="image/ayalove_self.jpg" width="100%">
+      </p>
+    </div>
+    <div class="content-box">
+      <h2 id="yousai">要塞少女</h2>
+      <p>
+        ほぼログイン勢、そんなにやりこんではいませんがノノちゃんが可愛すぎるので毎日ちゃんとミッションはこなしてる<br>
+        ハロウィンノノちゃんは天井した（<br>
+        <br>
+        <img src="image/yousai_self.png" width="100%">
+      </p>
+    </div>
+    <div class="content-box">
+      <h2 id="furufuru">ふるーつふるきゅーと！</h2>
+      <p>
+        最近ようやくちゃんとやり始めました<br>
+        かわいいキャラとのほほんとした世界観が癒やし<br>
+        ν不知火ちゃんお迎えできるまでガチャは我慢我慢……<br>
+        <br>
+        <img src="image/furufuru_self.png" width="100%">
+      </p>
+    </div>
+    <div class="content-box">
+      <h2 id="enkuri">エンジェリックリンク</h2>
+      <p>
+        のんびりやってます。<br>
+        ベリアルちゃんが一番好き。限定は爆死しちゃった……<br>
+        キャラが全体的にかわいくて癒やされるので、細く長くやるわね<br>
+        <br>
+        <img src="image/enkuri.png" width="100%">
+      </p>
+    </div>
+    <div class="content-box">
+      <h2 id="rejekuro">れじぇくろ！ 〜レジェンド・クローバー〜</h2>
+      <p>
+        一回事前登録からやってたにも関わらず、ツクヨミちゃんのためにリセマラした(ゔぉでーなのはそのせい)<br>
+        これものんびり、出来る範囲でマイペースに<br>
+        結構性癖に刺さるキャラが多くて石がすぐに溶けていく……<br>
+        画像クリックでIDをコピーできます<br>
+        <a href="javascript:void(0);" onclick="copy_to_clipboard('27207030');">
+          <img src="image/rejekuro_self.png" width="100%">
         </a>
       </p>
     </div>
     <div class="content-box">
-      <h2 id="uchihime">ウチ姫</h2>
+      <h2 id="misutore">ミストトレインガールズ 〜霧の世界の車窓から〜</h2>
       <p>
-        友達に誘われて一番最初にやったソシャゲですね<br>
-        人生で一番最初に真剣にランカーしたゲームでもあります。全3位はいい思い出<br>
-        今では半分引退勢です。このゲームいつになったらガチャがもう少し優しくなるんだ<br>
-        推しは花咲 恵ちゃん<br>
+        事前登録から実はやっているんですが、ちゃんとやり始めたのは本当に最近<br>
+        シモアマヅちゃんにガチ恋してしまった<br>
+        のんびりのろのろやっていますが、良かったらフレンドなってくださいまし<br>
         画像クリックでIDをコピーできます<br>
-        <a href="javascript:void(0);" onclick="copy_to_clipboard('39354508');">
-          <img src="image/uchi.jpg" width="100%">
+        <a href="javascript:void(0);" onclick="copy_to_clipboard('MSTY0Z5E5X9X');">
+          <img src="image/misutore_self.png" width="100%">
+        </a>
+      </p>
+    </div>
+    <div class="content-box">
+      <h2 id="aria">神殺しのアリア</h2>
+      <p>
+        のんびりやってます<br>
+        スマホでの挙動がもう少し安定してくれたらやりやすいのになぁ……<br>
+        画像クリックでIDをコピーできます<br>
+        <a href="javascript:void(0);" onclick="copy_to_clipboard('223099738');">
+          <img src="image/aria_self.png" width="100%">
         </a>
       </p>
     </div>
@@ -137,9 +206,7 @@
       <h2 id="others">その他のゲーム達</h2>
       <p>
         雑食なのでいろんなソシャゲをやってます<br>
-        スタリラ、グラブル、きらファン、プリコネR、あやらぶ<br>
-        ログイン勢なのでフレコなどはのせてません<br>
-        もし知りたい方がいれば声をかけてくださいまし<br>
+        載せてないけどもしかしたらやってる、みたいなソシャゲはあるので気軽に声かけてください<br>
       </p>
     </div>
     <div class="content-box">
@@ -149,6 +216,7 @@
         Perl, C++, Elixir, Rust, JavaScript, PHP, Java, OCaml, Haxe... and more<br>
         最近はもっぱらRust、Elixir、Haxeにお熱<br>
         コードを書くことに性的快感を感じる<br>
+        どうやらぷよぐらみんぐをしている時間のほうが、していない時間より長いらしい<br>
       </p>
     </div>
     <div class="content-box">
@@ -164,10 +232,9 @@
         音楽の趣味はブレブレ<br>
         GabberからのHardcore、Hardstyleを主に好み、ダンスミュージック以外なら<br>
         和楽器バンドを中心として色々聴く。和楽器とか和風なものがここでもやっぱり好き<br>
-        「ワタシ、至上主義」をぜひとも一度聴いてほしい<br>
         <br>
         お祭りが好き。花火も好き。桜とか蛍とか、マジでその時限定でしか見れないものにとても惹かれる<br>
-        YoutubeはM.S.S ProjectとQuizKnockしか最近は見てないや<br>
+        マイクラや麻雀も好き。MSSP、東海オンエアとか面白いものが大好き<br>
       </p>
     </div>
     <div class="content-box">
